fixes spacing between featured post and latest posts

--- a/_development/styles/2-modules/flexible-content/_featured-post.scss
+++ b/_development/styles/2-modules/flexible-content/_featured-post.scss
@@ -59,6 +59,7 @@
     }
 
     @include mq(medium) {
+        padding-bottom: space('gutter--desktop') * 1.5;
         &__thumbnail {
             width: 60%;
         }
